# saathy

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PROPOSAL.md  CLEANUP_TASKS.md  Dockerfile  IMPLEMENTATION_COMPLETE_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  Makefile  README.md  SIMPLIFIED_CHUNKING_SUMMARY.md  TESTING_GUIDE.md  demo_modular_chunking.py  demo_notion_connector.py  demo_simple_chunking.py  demo_slack_connector.py  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  quick_test.py  requirements.txt  start.sh  test_git_detection.py  test_prod_setup.py  validate-setup.sh  validate_settings.py
docs/: ARCHITECTURE_SUMMARY.md  README.md  README_graphs.md  api-reference.md  architecture.md  architecture_graphs.md  chunking-system.md  contributing.md  deployment-guide.md  development-guide.md  embedding-service.md  env.example  index.md  setup-streaming-intelligence.md  slack-setup.md  vps-setup.md
frontend/: package.json  tailwind.config.js
infra/: inventory.ini  playbook.yml
nginx/: nginx.conf
otel/: otel-collector-config.yml
prometheus/: prometheus.yml
saathy-conversational-ai/: .env.example  CHANGELOG.md  PHASE2_3_SUMMARY.md  README.md  deploy.sh  docker-compose.yml  run_tests.sh  test-deployment.sh
scripts/: backup.sh  generate-ssl-certs.sh  generate_architecture_graphs.py  generate_graphs.sh  requirements-graphs.txt  restore.sh  smoke_test.py  view_graphs.py
secrets/: grafana_admin_password
tests/: __init__.py  chunking_test.py  conftest.py  connector_integration_test.py  connector_unit_test.py  connectors_test.py  content_processor_test.py  embedding_test.py  vector_test.py  (+5 more)
(+229 files in other folders)
